# RickArkoPortfolio

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AI-CONTEXT.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  PORTFOLIO_GUIDE.md  README.md  apprunner.yaml  ecr.sh  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/.plans/33/hackathons/: raw-plan.md
.claude/.plans/33/testing/: plan.md
.claude/.plans/33/update-projects/: plan.md
.deployment/: README.md
.deployment/bash/: cleanup.sh  config.sh  deploy.sh  status.sh  update.sh
.deployment/windows/legacy/: README.md
.deployment/windows/legacy/powershell/: cleanup.ps1  config.ps1  deploy.ps1  status.ps1  update.ps1
.github/workflows/: deploy.yml  pr-preview.yml
deployment/: AppRunner.md  CICD.md  CustomDomain.md  DEPLOY.md  DeploymentDiagram.md  check_domain_status.ps1  check_domain_status.sh  custom_domain.sh  debug_toolkit.ps1  debug_toolkit.sh  domain_setup.ps1  ecr-setup.sh  final_fix.ps1  gunicorn-conf.py  portfolio.service
deployment/aws/: github-actions-deploy-policy.json  github-actions-oidc-trust-policy.json
deployment/nginx/: rarko-portfolio.conf
deployment/windows/legacy/: README.md  apprunner_custom_domain_complete.ps1  custom_domain.ps1  ecr-setup.ps1  ecr.ps1  fix_dns.ps1  simple_fix.ps1
src/: app.py  constants.py  resize_profile_image.py  utils.py
src/db/: experience.json  home.json  projects.json
src/rickarko_portfolio/: __init__.py  __main__.py  config.py  content.py  factory.py  seo.py  wsgi.py
src/static/css/: blog.css  style.css
src/static/js/: api.js  lib.js  main.js
src/templates/: 404.html  base.html  blog.html  contact.html  experience.html  home.html  navbar.html  projects.html  sign-in.html  sitemap.xml
tests/: conftest.py  test_app.py
tests/end_to_end/: test_routes.py
tests/integration/: test_app_factory.py
tests/regression/: test_runtime_contracts.py  test_smoke_contract.py
tests/unit/: test_config.py  test_content.py  test_seo.py
