[project]
name = "Rick_Arko_Portfolio_Site"
version = "0.1.0"
description = "Professional webpage for Rick Arko."
requires-python = "==3.11.*"

dependencies = [
    "flask",
    "python-dotenv",
    "gunicorn",
    "pillow>=11.3.0",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
